--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "files.associations": {
     "cmath": "cpp"
-  }
+  },
+  "ros.distro": "melodic",
+  "python.autoComplete.extraPaths": [
+    "/home/ashwinmr/Documents/robo/catkin_ws/devel/lib/python2.7/dist-packages",
+    "/opt/ros/melodic/lib/python2.7/dist-packages"
+  ]
 }
